--- a/website/frontend/src/app/globals.css
+++ b/website/frontend/src/app/globals.css
@@ -5,14 +5,14 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: rgba(255, 255, 255, 0.8);
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: rgba(255, 255, 255, 0.8);
   }
 }
 
